Closed
Bug 429864
Opened 17 years ago
Closed 17 years ago
assertion at startup with venkman
Categories
(Other Applications Graveyard :: Venkman JS Debugger, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: ajschult784, Assigned: mrbkap)
References
Details
(Keywords: regression)
Attachments
(2 files)
1.81 KB,
text/plain
|
Details | |
431 bytes,
patch
|
brendan
:
review+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
With current trunk, I get an assertion at startup,
###!!! ASSERTION: This is not supposed to fail!: 'Error', file /build/andrew/old/mozilla/js/src/xpconnect/src/nsXPConnect.cpp, line 1057
except for the first startup (when it does registration). According to bonsai, the checkin that triggered this is bug 428336, but that's clearly a typo.
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=%2Fmozilla%2Fjs%2Fsrc%2F&filetype=match&who=crowder%25fiverocks.com&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-04-14&maxdate=2008-04-15&cvsroot=%2Fcvsroot
stacktrace attached
Comment 1•17 years ago
|
||
Actual bug is bug 428366, CC-ing mrbkap and brendan. Does anyone know how bad this is?
Depends on: 428366
Comment 2•17 years ago
|
||
That assertion has nothing to do with bug 428366 or its patch. Was the wrong bug # cited, or could you have the wrong blame window?
/be
Comment 3•17 years ago
|
||
(In reply to comment #2)
> That assertion has nothing to do with bug 428366 or its patch. Was the wrong
> bug # cited, or could you have the wrong blame window?
>
> /be
>
The bug number in the blame window from comment #0 is definitely typoed (bug 428336 does not have patches and is a duplicate); the summary in it indicates bug 428366 (or bug 416834, which has the same summary). If none of those bugs apply, I would presume that the blame window is wrong. Andrew?
Reporter | ||
Comment 4•17 years ago
|
||
I actually backed out the patch in the blame window (which is bug 428366) and the assertion went away. The full checkin window between tinderbox cycles is
http://bonsai.mozilla.org/cvsquery.cgi?branch=HEAD&date=explicit&mindate=2008-04-14+16%3A13&maxdate=2008-04-14+17%3A47&cvsroot=%2Fcvsroot
(among those checkins, 428366 looks most relevant to me)
Comment 5•17 years ago
|
||
Ok, mysterious. I'm going to rely on mrbkap here.
/be
Assignee: rginda → mrbkap
Comment 6•17 years ago
|
||
Guessing: XPCWrapper::FindEval is somehow failing here?
Assignee | ||
Comment 7•17 years ago
|
||
My patch broke using 'eval' for eager standard class users.
Attachment #318905 -
Flags: review?(brendan)
Comment 9•17 years ago
|
||
Don't think this blocks, but we'd take a reviewed, safe fix.
Flags: blocking1.9? → blocking1.9-
Comment 10•17 years ago
|
||
Comment on attachment 318905 [details] [diff] [review]
Proposed fix
Whoops! This really ought to be taken for 1.9.
/be
Attachment #318905 -
Flags: review?(brendan)
Attachment #318905 -
Flags: review+
Attachment #318905 -
Flags: approval1.9?
Comment 11•17 years ago
|
||
Comment on attachment 318905 [details] [diff] [review]
Proposed fix
a1.9=beltzner
Attachment #318905 -
Flags: approval1.9? → approval1.9+
Comment 12•17 years ago
|
||
jsapi.c: 3.446
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•6 years ago
|
Product: Other Applications → Other Applications Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•