Bug 429864: assertion at startup with venkman, patch by mrbkap, r=brendan, a=beltzner